--- a/eval/promptfooconfig.yaml
+++ b/eval/promptfooconfig.yaml
@@ -21,7 +21,7 @@ defaultTest:
       value: Should mention all five products from the text.
 
     - type: latency
-      threshold: 7000
+      threshold: 10000
 
     - type: llm-rubric
       value: Is using the input text to generate the new text.
@@ -30,24 +30,21 @@ defaultTest:
       value: Select the best output based on the input text.
 
     - type: llm-rubric
-      value: Does it take the seed_sentence parameter into account?
-
-    - type: perplexity
-      threshold: 1.5
+      value: Does the generated output use the information about the company Shoby and its products?
 
     - type: python
       value: |
-        diff = abs(1000 - len(output.split(" ")))
-        if diff < 200:
+        diff = abs(500 - len(output.split(" ")))
+        if diff < 100:
           return {
             'pass': True,
             'score': diff,
-            'reason': 'The output length is between 800 to 1200 words.'
+            'reason': 'The output length is between 400 to 600 words.'
           }
         else:
           return {
             'pass': False,
             'score': diff,
-            'reason': 'The output length is not between 800 to 1200 words.'
+            'reason': 'The output length is not between 400 to 600 words.'
           }
 
